[package]
name = "native-token"
version = "0.1.0"
description = "Hello Native Token"
edition = "2018"

[dependencies]
anchor-client = "0.13.0"
solana-program = "1.7.8"
solana-client = "1.7.8"
solana-sdk = "1.7.8"
spl-token = { version = "3.2.0", default-features = false }
shellexpand = "2.1.0"
rand = "0.7.3"
