[package]
name = "p4-native-token"
version = "0.1.0"
description = "Hello Solona - Part 4 - Native Token"
edition = "2018"

[dependencies]
anchor-client = "0.18.2"
solana-program = "^1.8.0"
solana-client = "^1.8.0"
solana-sdk = "^1.8.0"
spl-token = { version = "3.2.0", default-features = false }
shellexpand = "2.1.0"
rand = "0.7.3"
